--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body {
     background-color: hsl(225, 100%, 98%);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 100%;
+    font-family: 'Red Hat Display', sans-serif;
 }
 
 /* CARD GENERAL LAYOUT */
@@ -24,8 +24,6 @@ body {
     height: 700px;
     border-radius: 10px;
     background-color: white;
-    font-family: 'Red Hat Display', sans-serif;
-    font-weight: 600;
 }
 
 /* CARD GENERAL LAYOUT - IMAGE*/
@@ -40,7 +38,7 @@ body {
 /* CARD GENERAL LAYOUT - CONTENT*/
 .content {
     display: grid;
-    grid-template-rows: 150px 100px 150px;
+    grid-template-rows: 150px 100px 200px;
     grid-template-areas:
     'summary'
     'option'
@@ -61,6 +59,7 @@ body {
 .summary {
     grid-area: 'summary';
     text-align: center;
+    font-weight: 700;
 }
 
 h2 {
@@ -68,7 +67,7 @@ h2 {
 }
 
 .summary p {
-    color: hsl(0, 0%, 0%, 60%);
+    color: rgb(133, 127, 127);
 }
 
 /* CARD: CONTENT - OPTION */
@@ -81,6 +80,8 @@ h2 {
     background-color: hsl(225, 100%, 98%);
     border-radius: 10px;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 .icon {
@@ -89,13 +90,20 @@ h2 {
     justify-content: center;
 }
 
-
 .plan {
     grid-area: 'plan';
 }
 
+.plan p {
+    color: rgb(133, 127, 127)
+}
+
 .change {
     grid-area: 'change';
+}
+
+h4 {
+    margin: 20px 0 0 0;
 }
 
 /* CARD: CONTENT - CALL TO ACTION */
@@ -106,10 +114,12 @@ h2 {
 }
 
 .btn {
-    padding: 10px;
+    padding: 15px;
     margin: 10px 0;
     font-weight: 900;
+    font-size: 14px;
     width: 360px;
+    border: none;
 }
 
 a {
@@ -135,10 +145,5 @@ a {
 }
 
 .cancel a{
-    color: black;
+    color: rgb(133, 127, 127);
 }
-
-p {
-    font-size: 16px;
-}
-
