--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,6 +141,7 @@ a {
     color: white;
     background-color: hsl(245, 75%, 52%);
     border-radius: 10px;
+    /*box-shadow: 0px 30px 10px -15px hsl(245, 75%, 52%, 15%);*/
 }
 
 .payment a {
